- Locked calibration and maintenance behind popup message - Form can now be in french and in english - Fix unit commands being wrong

--- a/Poste-De-Commande/Programmes/PC/CommandCenter/Form1.resx
+++ b/Poste-De-Commande/Programmes/PC/CommandCenter/Form1.resx
@@ -1828,7 +1828,7 @@
     <value>NoControl</value>
   </data>
   <data name="Calibration_Save_Logs.Location" type="System.Drawing.Point, System.Drawing">
-    <value>637, 295</value>
+    <value>637, 189</value>
   </data>
   <data name="Calibration_Save_Logs.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 100</value>
@@ -1867,7 +1867,7 @@
     <value>NoControl</value>
   </data>
   <data name="Calibration_Clear_Logs.Location" type="System.Drawing.Point, System.Drawing">
-    <value>637, 189</value>
+    <value>637, 295</value>
   </data>
   <data name="Calibration_Clear_Logs.Size" type="System.Drawing.Size, System.Drawing">
     <value>100, 100</value>
@@ -2682,6 +2682,81 @@
   <data name="&gt;&gt;Tab_Terminal.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
+  <data name="DropDown_Languages.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Bottom, Right</value>
+  </data>
+  <data name="DropDown_Languages.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Consolas, 9.75pt, style=Bold</value>
+  </data>
+  <data name="DropDown_Languages.Items" xml:space="preserve">
+    <value>Français</value>
+  </data>
+  <data name="DropDown_Languages.Items1" xml:space="preserve">
+    <value>English</value>
+  </data>
+  <data name="DropDown_Languages.Location" type="System.Drawing.Point, System.Drawing">
+    <value>537, 234</value>
+  </data>
+  <data name="DropDown_Languages.RightToLeft" type="System.Windows.Forms.RightToLeft, System.Windows.Forms">
+    <value>No</value>
+  </data>
+  <data name="DropDown_Languages.Size" type="System.Drawing.Size, System.Drawing">
+    <value>200, 23</value>
+  </data>
+  <data name="DropDown_Languages.TabIndex" type="System.Int32, mscorlib">
+    <value>55</value>
+  </data>
+  <data name="&gt;&gt;DropDown_Languages.Name" xml:space="preserve">
+    <value>DropDown_Languages</value>
+  </data>
+  <data name="&gt;&gt;DropDown_Languages.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;DropDown_Languages.Parent" xml:space="preserve">
+    <value>Tab_Settings</value>
+  </data>
+  <data name="&gt;&gt;DropDown_Languages.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="Label_Language.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Bottom, Right</value>
+  </data>
+  <data name="Label_Language.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
+    <value>Flat</value>
+  </data>
+  <data name="Label_Language.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Consolas, 11.25pt, style=Bold</value>
+  </data>
+  <data name="Label_Language.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="Label_Language.Location" type="System.Drawing.Point, System.Drawing">
+    <value>427, 234</value>
+  </data>
+  <data name="Label_Language.Size" type="System.Drawing.Size, System.Drawing">
+    <value>104, 27</value>
+  </data>
+  <data name="Label_Language.TabIndex" type="System.Int32, mscorlib">
+    <value>54</value>
+  </data>
+  <data name="Label_Language.Text" xml:space="preserve">
+    <value>Language:</value>
+  </data>
+  <data name="Label_Language.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleLeft</value>
+  </data>
+  <data name="&gt;&gt;Label_Language.Name" xml:space="preserve">
+    <value>Label_Language</value>
+  </data>
+  <data name="&gt;&gt;Label_Language.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;Label_Language.Parent" xml:space="preserve">
+    <value>Tab_Settings</value>
+  </data>
+  <data name="&gt;&gt;Label_Language.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
   <data name="Button_AutoConnect.AccessibleDescription" xml:space="preserve">
     <value>Tells the program if it should automatically attempt to connect to a BeagleBone when you link to a serial port</value>
   </data>
@@ -2719,7 +2794,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;Button_AutoConnect.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>2</value>
   </data>
   <data name="Label_AutoConnect.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -2758,7 +2833,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;Label_AutoConnect.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="BeagleBone_FilePath.AccessibleDescription" xml:space="preserve">
     <value>Contains the name of the project file to execute inside the BeagleBoneBlue</value>
@@ -2791,7 +2866,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;BeagleBone_FilePath.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>4</value>
   </data>
   <data name="Label_FilePath.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -2830,7 +2905,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;Label_FilePath.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>5</value>
   </data>
   <data name="BeagleBone_FileName.AccessibleDescription" xml:space="preserve">
     <value>Contains the name of the project file to execute inside the BeagleBoneBlue</value>
@@ -2863,7 +2938,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;BeagleBone_FileName.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>6</value>
   </data>
   <data name="Label_FileName.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -2902,7 +2977,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;Label_FileName.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>7</value>
   </data>
   <data name="BeagleBone_Password.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -2932,7 +3007,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;BeagleBone_Password.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>8</value>
   </data>
   <data name="Label_Password.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -2971,7 +3046,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;Label_Password.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>9</value>
   </data>
   <data name="BeagleBone_User.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -3001,7 +3076,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;BeagleBone_User.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>10</value>
   </data>
   <data name="Label_User.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -3040,7 +3115,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;Label_User.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>11</value>
   </data>
   <data name="DropDown_ScaleUnit.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
@@ -3076,7 +3151,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;DropDown_ScaleUnit.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>12</value>
   </data>
   <data name="Label_ScaleUnit.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
@@ -3115,7 +3190,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;Label_ScaleUnit.ZOrder" xml:space="preserve">
-    <value>11</value>
+    <value>13</value>
   </data>
   <data name="SerialPortText.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3151,7 +3226,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;SerialPortText.ZOrder" xml:space="preserve">
-    <value>12</value>
+    <value>14</value>
   </data>
   <data name="PortBox1.Font" type="System.Drawing.Font, System.Drawing">
     <value>Consolas, 9.75pt, style=Bold</value>
@@ -3178,7 +3253,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;PortBox1.ZOrder" xml:space="preserve">
-    <value>13</value>
+    <value>15</value>
   </data>
   <data name="FlowControlText.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3214,7 +3289,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;FlowControlText.ZOrder" xml:space="preserve">
-    <value>14</value>
+    <value>16</value>
   </data>
   <data name="FlowControlBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>Consolas, 9.75pt, style=Bold</value>
@@ -3241,7 +3316,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;FlowControlBox.ZOrder" xml:space="preserve">
-    <value>15</value>
+    <value>17</value>
   </data>
   <data name="TXTimeOutBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>Consolas, 9.75pt, style=Bold</value>
@@ -3268,7 +3343,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;TXTimeOutBox.ZOrder" xml:space="preserve">
-    <value>16</value>
+    <value>18</value>
   </data>
   <data name="RXTimeOutBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>Consolas, 9.75pt, style=Bold</value>
@@ -3295,7 +3370,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;RXTimeOutBox.ZOrder" xml:space="preserve">
-    <value>17</value>
+    <value>19</value>
   </data>
   <data name="TXTimeOutText.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3331,7 +3406,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;TXTimeOutText.ZOrder" xml:space="preserve">
-    <value>18</value>
+    <value>20</value>
   </data>
   <data name="RXTimeOutText.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3367,7 +3442,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;RXTimeOutText.ZOrder" xml:space="preserve">
-    <value>19</value>
+    <value>21</value>
   </data>
   <data name="ParityText.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3403,7 +3478,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;ParityText.ZOrder" xml:space="preserve">
-    <value>20</value>
+    <value>22</value>
   </data>
   <data name="ParityBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>Consolas, 9.75pt, style=Bold</value>
@@ -3430,7 +3505,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;ParityBox.ZOrder" xml:space="preserve">
-    <value>21</value>
+    <value>23</value>
   </data>
   <data name="StopBitsText.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3466,7 +3541,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;StopBitsText.ZOrder" xml:space="preserve">
-    <value>22</value>
+    <value>24</value>
   </data>
   <data name="StopBitBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>Consolas, 9.75pt, style=Bold</value>
@@ -3493,7 +3568,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;StopBitBox.ZOrder" xml:space="preserve">
-    <value>23</value>
+    <value>25</value>
   </data>
   <data name="DataBitsText.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3529,7 +3604,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;DataBitsText.ZOrder" xml:space="preserve">
-    <value>24</value>
+    <value>26</value>
   </data>
   <data name="DataBitBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>Consolas, 9.75pt, style=Bold</value>
@@ -3562,7 +3637,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;DataBitBox.ZOrder" xml:space="preserve">
-    <value>25</value>
+    <value>27</value>
   </data>
   <data name="BaudRateText.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3598,7 +3673,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;BaudRateText.ZOrder" xml:space="preserve">
-    <value>26</value>
+    <value>28</value>
   </data>
   <data name="BaudRateBox.Font" type="System.Drawing.Font, System.Drawing">
     <value>Consolas, 9.75pt, style=Bold</value>
@@ -3667,7 +3742,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;BaudRateBox.ZOrder" xml:space="preserve">
-    <value>27</value>
+    <value>29</value>
   </data>
   <data name="Button_Scale.AccessibleDescription" xml:space="preserve">
     <value>Indicate the state of the CAN scale</value>
@@ -3706,7 +3781,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;Button_Scale.ZOrder" xml:space="preserve">
-    <value>28</value>
+    <value>30</value>
   </data>
   <data name="Button_Link.AccessibleDescription" xml:space="preserve">
     <value>Indicate the state of the USB link between the beagleBoneBlue and the PC</value>
@@ -3742,7 +3817,7 @@
     <value>Tab_Settings</value>
   </data>
   <data name="&gt;&gt;Button_Link.ZOrder" xml:space="preserve">
-    <value>29</value>
+    <value>31</value>
   </data>
   <data name="Tab_Settings.Font" type="System.Drawing.Font, System.Drawing">
     <value>Consolas, 8.25pt, style=Bold</value>
@@ -3791,7 +3866,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB2
-        ZgAAAk1TRnQBSQFMAgEBKQEAAWgBAwFoAQMBIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZgAAAk1TRnQBSQFMAgEBKQEAAdABAwHQAQMBIAEAASABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABgAMAAWABAQIAAQEBAAEIBgABsBgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
